@@ -7,6 +7,10 @@ license             = Perl_5
 [@Author::ETHER]
 :version = 0.088
 
+[Encoding]
+encoding = bytes
+match = ^t/cpanidx_responses
+
 [MetaResources]
 x_IRC = irc://irc.perl.org/#perl-qa
 x_MailingList = http://lists.perl.org/list/perl-qa.html
