@@ -1,0 +1,10 @@
+[
+   {
+      "dist_file" : "E/ET/ETHER/Moose-2.1403.tar.gz",
+      "mod_vers" : "2.1403",
+      "cpan_id" : "ETHER",
+      "dist_name" : "Moose",
+      "mod_name" : "Moose",
+      "dist_vers" : "2.1403"
+   }
+]
